tests/fail/test-neg-return-conflict4_nestedBlocks.ctds

bool func(){

  {  integer flag;
     return;
  }
}

void main(){
  {{return;}}
}
